[gd_scene load_steps=9 format=2]

[ext_resource path="res://enemies/Enemy.gd" type="Script" id=1]
[ext_resource path="res://enemies/BaseSpriteFrames.tres" type="SpriteFrames" id=2]
[ext_resource path="res://enemies/6_flamelash_spritesheet.png" type="Texture" id=3]
[ext_resource path="res://enemies/imp/death.wav" type="AudioStream" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 5.04246, 4.85927 )

[sub_resource type="Animation" id=2]
resource_name = "death"
step = 0.02
tracks/0/type = "value"
tracks/0/path = NodePath("../Zombie/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.02, 0.04, 0.06, 0.08, 0.1, 0.12, 0.14, 0.16, 0.18, 0.2, 0.22, 0.24, 0.26, 0.28, 0.3, 0.32, 0.34, 0.36, 0.38, 0.4, 0.42, 0.44, 0.46, 0.48, 0.5, 0.52, 0.54, 0.56, 0.58, 0.6, 0.62, 0.64, 0.66, 0.68, 0.7, 0.72, 0.74, 0.76, 0.78, 0.8, 0.82, 0.84, 0.86, 0.88, 0.9, 0.92, 0.94, 0.96 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 32, 33, 34, 35, 36, 37, 38, 39, 40, 41, 42, 43, 44, 45, 46, 47, 48 ]
}

[sub_resource type="CircleShape2D" id=3]
radius = 60.0

[sub_resource type="CircleShape2D" id=4]
radius = 15.0

[node name="Enemy" type="KinematicBody2D" groups=[
"enemy",
]]
collision_layer = 2
collision_mask = 239
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = ExtResource( 2 )
animation = "idle"
frame = 3
playing = true
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0.936026, 1.58048 )
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/death = SubResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0.972748, -5.40798 )
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 3 )
vframes = 7
hframes = 7
frame = 48

[node name="Visibility" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Visibility"]
shape = SubResource( 3 )

[node name="Effects" type="Node" parent="."]

[node name="Death" type="AudioStreamPlayer" parent="Effects"]
stream = ExtResource( 4 )

[node name="Contact" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Contact"]
position = Vector2( 0.514267, 2.46847 )
shape = SubResource( 4 )
[connection signal="body_entered" from="Visibility" to="." method="_on_Visibility_body_entered"]
[connection signal="body_exited" from="Visibility" to="." method="_on_Visibility_body_exited"]
[connection signal="body_entered" from="Contact" to="." method="_on_Contact_body_entered"]
